miniconf/tests/ui/exact_size_iter.stderr
error[E0080]: evaluation panicked: insufficient depth for exact size iteration
 --> tests/ui/exact_size_iter.rs:3:39
  |
3 | const _: ExactSize<NodeIter<(), 0>> = <[(); 1]>::SCHEMA.nodes();
  |                                       ^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `_` failed inside this call
  |
note: inside `Schema::nodes::<(), 0>`
 --> src/schema.rs
  |
  |         NodeIter::exact_size(self)
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^
note: inside `NodeIter::<(), 0>::exact_size`
 --> src/iter.rs
  |
  |             panic!("insufficient depth for exact size iteration");
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the failure occurred here
